--- a/public/Nitrocid.Addons/Nitrocid.Extras.Forecast/Resources/Languages/Output/Localizations.de.resx
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Forecast/Resources/Languages/Output/Localizations.de.resx
@@ -303,5 +303,23 @@
   <data name="NKS_FORECAST_COMMAND_WEATHEROLD_ARGUMENT_APIKEY_DESC" xml:space="preserve">
     <value>OpenWeatherMap API-Schlüssel</value>
   </data>
+  <data name="NKS_FORECAST_WEATHER_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>Wettervorhersage</value>
+  </data>
+  <data name="NKS_FORECAST_WEATHER_TUI_HELP01_DESC" xml:space="preserve">
+    <value>Wettervorhersage-Informationen immer griffbereit</value>
+  </data>
+  <data name="NKS_FORECAST_WEATHER_TUI_HELP01_BODY" xml:space="preserve">
+    <value>Die Wettervorhersage umfasst Wetterdaten wie Temperatur, Vorhersage (sonnig, regnerisch usw.) und UV-Index. Über Ihre Internetverbindung können Sie den aktuellen Wetterstatus abrufen.</value>
+  </data>
+  <data name="NKS_FORECAST_WEATHER_TUI_HELP02_TITLE" xml:space="preserve">
+    <value>Verwendete Quellen</value>
+  </data>
+  <data name="NKS_FORECAST_WEATHER_TUI_HELP02_DESC" xml:space="preserve">
+    <value>Welche Quellen nutzen wir?</value>
+  </data>
+  <data name="NKS_FORECAST_WEATHER_TUI_HELP02_BODY" xml:space="preserve">
+    <value>Wir verwenden OpenWeatherMap für die Wettervorhersagedaten. Alternativ bieten wir Ihnen gegen Gebühr auch The Weather Channel (weather.com) für dieselben Daten an.</value>
+  </data>
 
 </root>
