--- a/public/Nitrocid.Addons/Nitrocid.Extras.Forecast/Resources/Languages/Output/Localizations.ga.resx
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Forecast/Resources/Languages/Output/Localizations.ga.resx
@@ -303,5 +303,23 @@
   <data name="NKS_FORECAST_COMMAND_WEATHEROLD_ARGUMENT_APIKEY_DESC" xml:space="preserve">
     <value>Eochair API OpenWeatherMap</value>
   </data>
+  <data name="NKS_FORECAST_WEATHER_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>Réamhaisnéis na haimsire</value>
+  </data>
+  <data name="NKS_FORECAST_WEATHER_TUI_HELP01_DESC" xml:space="preserve">
+    <value>Faisnéis réamhaisnéise na haimsire ar fáil duit</value>
+  </data>
+  <data name="NKS_FORECAST_WEATHER_TUI_HELP01_BODY" xml:space="preserve">
+    <value>Is grúpa faisnéise í réamhaisnéis na haimsire ina bhfuil sonraí aimsire, amhail teocht, réamhaisnéis (grianmhar, báistí, srl.), agus innéacs ultraivialait. Trí úsáid a bhaint as do nasc líonra, is féidir leat a fháil amach cén staid aimsire atá ann san am agus sa dáta reatha.</value>
+  </data>
+  <data name="NKS_FORECAST_WEATHER_TUI_HELP02_TITLE" xml:space="preserve">
+    <value>Foinsí a úsáidtear</value>
+  </data>
+  <data name="NKS_FORECAST_WEATHER_TUI_HELP02_DESC" xml:space="preserve">
+    <value>Cad iad na foinsí a úsáidimid?</value>
+  </data>
+  <data name="NKS_FORECAST_WEATHER_TUI_HELP02_BODY" xml:space="preserve">
+    <value>Úsáidimid OpenWeatherMap le haghaidh sonraí réamhaisnéise na haimsire, ach tacaímid le The Weather Channel (weather.com) freisin le haghaidh na sonraí céanna má tá tú in ann íoc as an tseirbhís.</value>
+  </data>
 
 </root>
