--- a/public/Nitrocid.Addons/Nitrocid.Extras.Forecast/Resources/Languages/Output/Localizations.nl.resx
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Forecast/Resources/Languages/Output/Localizations.nl.resx
@@ -303,5 +303,23 @@
   <data name="NKS_FORECAST_COMMAND_WEATHEROLD_ARGUMENT_APIKEY_DESC" xml:space="preserve">
     <value>OpenWeatherMap API-sleutel</value>
   </data>
+  <data name="NKS_FORECAST_WEATHER_TUI_HELP01_TITLE" xml:space="preserve">
+    <value>Weersverwachting</value>
+  </data>
+  <data name="NKS_FORECAST_WEATHER_TUI_HELP01_DESC" xml:space="preserve">
+    <value>Weersverwachtingsinformatie binnen handbereik</value>
+  </data>
+  <data name="NKS_FORECAST_WEATHER_TUI_HELP01_BODY" xml:space="preserve">
+    <value>De weersvoorspelling is een verzameling informatie die weergegevens bevat, zoals temperatuur, voorspelling (zonnig, regenachtig, enz.) en ultraviolette index. Via uw netwerkverbinding kunt u de weersomstandigheden op de huidige tijd en datum bekijken.</value>
+  </data>
+  <data name="NKS_FORECAST_WEATHER_TUI_HELP02_TITLE" xml:space="preserve">
+    <value>Gebruikte bronnen</value>
+  </data>
+  <data name="NKS_FORECAST_WEATHER_TUI_HELP02_DESC" xml:space="preserve">
+    <value>Welke bronnen gebruiken we?</value>
+  </data>
+  <data name="NKS_FORECAST_WEATHER_TUI_HELP02_BODY" xml:space="preserve">
+    <value>We gebruiken OpenWeatherMap voor de weersvoorspelling, maar we ondersteunen ook The Weather Channel (weather.com) voor dezelfde gegevens, mits u hiervoor kunt betalen.</value>
+  </data>
 
 </root>
