--- a/public/Nitrocid.Addons/Nitrocid.Extras.Forecast/Resources/Languages/jpn.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Forecast/Resources/Languages/jpn.json
@@ -253,6 +253,30 @@
     {
       "loc": "NKS_FORECAST_COMMAND_WEATHEROLD_ARGUMENT_APIKEY_DESC",
       "text": "OpenWeatherMap APIキー"
+    },
+    {
+      "loc": "NKS_FORECAST_WEATHER_TUI_HELP01_TITLE",
+      "text": "天気予報"
+    },
+    {
+      "loc": "NKS_FORECAST_WEATHER_TUI_HELP01_DESC",
+      "text": "指先で天気予報情報を確認"
+    },
+    {
+      "loc": "NKS_FORECAST_WEATHER_TUI_HELP01_BODY",
+      "text": "天気予報は、気温、予報（晴れ、雨など）、紫外線指数などの気象データを含む情報です。ネットワーク接続を使用して、現在の日時の天気を確認できます。"
+    },
+    {
+      "loc": "NKS_FORECAST_WEATHER_TUI_HELP02_TITLE",
+      "text": "使用情報源"
+    },
+    {
+      "loc": "NKS_FORECAST_WEATHER_TUI_HELP02_DESC",
+      "text": "どのような情報源を使用していますか？"
+    },
+    {
+      "loc": "NKS_FORECAST_WEATHER_TUI_HELP02_BODY",
+      "text": "天気予報データはOpenWeatherMapを使用していますが、有料サービスの場合はThe Weather Channel（weather.com）から同じデータも提供しています。"
     }
   ]
 }
