--- a/public/Nitrocid.Addons/Nitrocid.Extras.Forecast/Resources/Languages/rmn.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Forecast/Resources/Languages/rmn.json
@@ -254,6 +254,30 @@
     {
       "loc": "NKS_FORECAST_COMMAND_WEATHEROLD_ARGUMENT_APIKEY_DESC",
       "text": "Cheia API OpenWeatherMap"
+    },
+    {
+      "loc": "NKS_FORECAST_WEATHER_TUI_HELP01_TITLE",
+      "text": "Prognoza meteo"
+    },
+    {
+      "loc": "NKS_FORECAST_WEATHER_TUI_HELP01_DESC",
+      "text": "Informații despre prognoza meteo la îndemână"
+    },
+    {
+      "loc": "NKS_FORECAST_WEATHER_TUI_HELP01_BODY",
+      "text": "Prognoza meteo este un grup de informații care conține date meteo, cum ar fi temperatura, prognoza meteo (însorit, ploios etc.) și indicele ultraviolet. Folosind conexiunea la rețea, puteți afla care este starea vremii la ora și data curente."
+    },
+    {
+      "loc": "NKS_FORECAST_WEATHER_TUI_HELP02_TITLE",
+      "text": "Surse utilizate"
+    },
+    {
+      "loc": "NKS_FORECAST_WEATHER_TUI_HELP02_DESC",
+      "text": "Care sunt sursele pe care le folosim?"
+    },
+    {
+      "loc": "NKS_FORECAST_WEATHER_TUI_HELP02_BODY",
+      "text": "Folosim OpenWeatherMap pentru datele de prognoză meteo, dar oferim și servicii de asistență The Weather Channel (weather.com) pentru aceleași date, dacă puteți plăti pentru serviciu."
     }
   ]
 }
