--- a/public/Nitrocid.Addons/Nitrocid.Extras.Forecast/Resources/Languages/vtn.json
+++ b/public/Nitrocid.Addons/Nitrocid.Extras.Forecast/Resources/Languages/vtn.json
@@ -253,6 +253,30 @@
     {
       "loc": "NKS_FORECAST_COMMAND_WEATHEROLD_ARGUMENT_APIKEY_DESC",
       "text": "Khóa API OpenWeatherMap"
+    },
+    {
+      "loc": "NKS_FORECAST_WEATHER_TUI_HELP01_TITLE",
+      "text": "Dự báo thời tiết"
+    },
+    {
+      "loc": "NKS_FORECAST_WEATHER_TUI_HELP01_DESC",
+      "text": "Thông tin dự báo thời tiết trong tầm tay bạn"
+    },
+    {
+      "loc": "NKS_FORECAST_WEATHER_TUI_HELP01_BODY",
+      "text": "Dự báo thời tiết là một nhóm thông tin chứa dữ liệu thời tiết, chẳng hạn như nhiệt độ, dự báo (nắng, mưa, v.v.) và chỉ số tia cực tím. Sử dụng kết nối mạng, bạn có thể tìm hiểu tình hình thời tiết tại thời điểm và ngày hiện tại."
+    },
+    {
+      "loc": "NKS_FORECAST_WEATHER_TUI_HELP02_TITLE",
+      "text": "Nguồn được sử dụng"
+    },
+    {
+      "loc": "NKS_FORECAST_WEATHER_TUI_HELP02_DESC",
+      "text": "Chúng tôi sử dụng những nguồn nào?"
+    },
+    {
+      "loc": "NKS_FORECAST_WEATHER_TUI_HELP02_BODY",
+      "text": "Chúng tôi sử dụng OpenWeatherMap cho dữ liệu dự báo thời tiết, nhưng chúng tôi cũng hỗ trợ The Weather Channel (weather.com) cho cùng dữ liệu này nếu bạn có thể trả phí cho dịch vụ."
     }
   ]
 }
